# usflib

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
include/: eternalAdapted.hpp  sample_locales.hpp  single_header.cmake
include/usf/: usf.hpp
include/usf/develop/: usf_arg_custom_type.hpp  usf_arg_format.hpp  usf_argument.hpp  usf_config.hpp  usf_float.hpp  usf_integer.hpp  usf_locale.hpp  usf_locales_territories.hpp  usf_main.hpp  usf_string_span.hpp  usf_string_view.hpp  usf_traits.hpp  usf_translation_key.hpp
test/: CMakeLists.txt  test_main.cpp
test/include/: unit_tests_config.hpp
test/source/: test_usf_translation_array.cpp  unit_tests_basic_types.cpp  unit_tests_benchmarks.cpp  unit_tests_custom_types.cpp  unit_tests_floating_point.cpp  unit_tests_format_spec.cpp  unit_tests_positional_args.cpp
unit_tests/include/: unit_tests_config.hpp
